force-app/main/default/objects/wkdw__OnboardingTemplate__c/wkdw__OnboardingTemplate__c.object-meta.xml
<CustomObject>
    <description>Custom object that enables an HR agent to create a list of tasks that will help a new employee transition through the organization.</description>
    <label>Transition Plan Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transition Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>