force-app/main/default/objects/wkdw__OnboardingTemplate__c/fields/wkdw__PlanOwner__c.field-meta.xml
<CustomField>
    <fullName>wkdw__PlanOwner__c</fullName>
    <description>If Plan Owner is desired, enter the Queue ID.</description>
    <inlineHelpText>If Plan Owner is desired, enter the Queue ID.</inlineHelpText>
    <label>Plan Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>