force-app/main/default/objects/wkdw__OnboardingTemplate__c/fields/wkdw__TransitionType__c.field-meta.xml
<CustomField>
    <fullName>wkdw__TransitionType__c</fullName>
    <label>Transition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Job Change</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>